# Scan-plates

./: CMakeLists.txt  README.md
src/: main.cpp  main.h  scanPlates.cpp  scanPlates.h
